# SFML_RPG

./: CMakeLists.txt
src/: Game.cpp  Game.h  State.cpp  State.h  main.cpp
